syntax = "proto3";

package asset;

import "google/protobuf/empty.proto";
option go_package = "./asset";

service AssetService {
  rpc GetAsset(AssetRequest) returns (AssetResponse);
  rpc SetAsset(AssetRequest) returns (AssetResponse);
  rpc DeleteAsset(AssetRequest) returns (google.protobuf.Empty);
}

message Asset {
  string id = 1;
  string ticker = 2;
  repeated string tags = 3;
}

message AssetRequest {
  string id = 1;
  string tag = 2;
}

message AssetResponse {
  repeated Asset assets = 1;
}
